gap, margin-right fix

--- a/client/src/components/profile-info/ProfileInfo.module.scss
+++ b/client/src/components/profile-info/ProfileInfo.module.scss
@@ -107,12 +107,9 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
+    gap: 2rem;
 
     margin: auto 2rem;
-
-    &>* {
-      margin-right: 2rem;
-    }
 
     &>*[class*="List"] {
       flex-grow: 1;
